envoy/server.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8000
      traffic_direction: inbound
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: auto
                tracing:
                  verbose: true
                  provider:
                    name: envoy.tracers.zipkin
                    typed_config:
                      "@type": type.googleapis.com/envoy.config.trace.v2.ZipkinConfig
                      collector_cluster: jaeger
                      collector_endpoint: /api/v2/spans
                      shared_span_context: false
                      collector_endpoint_version: http_json
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                            grpc: {}
                          route:
                            cluster: service
                http_filters:
                  - name: envoy.filters.http.jwt_authn
                    config:
                      providers:
                        provider1:
                          issuer: issuer1
                          audiences:
                            - audience1
                            - audience2
                          remote_jwks:
                            http_uri:
                              uri: https://dev-283652.okta.com/oauth2/v1/keys
                              cluster: okta_jwks_cluster
                      rules:
                        # Not jwt verification is required for /health path
                        - match:
                            prefix: /health

                        # Jwt verification for provider1 is required for path prefixed with "prefix"
                        - match:
                            prefix: /prefix
                          requires:
                            provider_name: provider1

                        # Jwt verification for either provider1 or provider2 is required for all other requests.
                        - match:
                            prefix: /
                          requires:
                            requires_any:
                              requirements:
                                - provider_name: provider1
                  - name: envoy.filters.http.router
  clusters:
    - name: service
      connect_timeout: 5s
      type: strict_dns
      http2_protocol_options: {}
      lb_policy: round_robin
      load_assignment:
        cluster_name: service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ruby-server
                      port_value: 5555
              - endpoint:
                  address:
                    socket_address:
                      address: go-server
                      port_value: 5555
    - name: jaeger
      connect_timeout: 1s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: jaeger
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: jaeger
                      port_value: 9411

admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8081

tracing:
  http:
    name: envoy.zipkin
    config:
      collector_cluster: jaeger
      collector_endpoint: /api/v2/spans
      collector_endpoint_version: http_json
      shared_span_context: false
